# pacman_ws

./: .gitignore  .gitmodules  LICENSE  README.md
data/results/: speeds.txt
src/gui/: CMakeLists.txt  package.xml
src/gui/launch/: guilaunch.launch  guilaunch.launch~
src/gui/scripts/: helpful.txt  pacmanGUI.py  rosController.py  testUI.py
src/pacman_config/: CMakeLists.txt  dual_ekf_navsat.yaml  ekf_fusion.yaml  ekf_template.yaml  homography.yaml  model.urdf  package.xml  pacman.ui
src/pacman_config/controller/: ps4.config.yaml
src/pacman_config/duro/: piksi_multi_driver_settings.yaml
src/pacman_config/twist_mux/: twist_mux_topics.yaml
src/pacman_launch/: CMakeLists.txt  package.xml
src/pacman_launch/launch/: diff_tf.launch  dual_ekf_navsat.launch  ekf_fusion.launch  imu_filter.launch  joint_state_publisher.launch  master_sync.launch  motor_controller.launch  (+11 more)
src/pacman_msgs/: CMakeLists.txt  package.xml
src/pacman_simulation/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/path_mapping/: CMakeLists.txt  package.xml
src/path_navigation/: CMakeLists.txt  package.xml
src/roboteq_drivers/: CMakeLists.txt  package.xml
src/roboteq_drivers/include/roboteq_drivers/: roboteq_motor_wrapper.h
src/roboteq_drivers/launch/: example.launch  motor_wrapper.launch  position_controller.launch
src/roboteq_drivers/pyscripts/: cmdvel2go.py  cmdvel2go.py~HEAD  publish_go.py
src/roboteq_drivers/src/: RoboteqDevice.cpp  roboteq_motor_wrapper.cpp  sample.cpp
src/runscripts/: ROS_MASTER.txt
src/utility_scripts/: CMakeLists.txt  package.xml
(+87 files in other folders)
